# zcrc-chronos-rs

./: .gitignore  .rusty-hook.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml
.github/workflows/: ci.yml
crates/analyzer/: Cargo.toml
crates/analyzer/src/: analyzer.rs
crates/bench/: Cargo.toml
crates/bench/src/: backtester.rs  data_generator.rs  lib.rs  metrics.rs
crates/bench/tests/: benchmark_report.rs
crates/benchmarks/: Cargo.toml
crates/benchmarks/benches/: analyzer_bench.rs  models_bench.rs  normalize_bench.rs  npts_bench.rs  pipeline_bench.rs  trainer_bench.rs
crates/benchmarks/src/: lib.rs
crates/chronos-analyzer/: Cargo.toml
crates/chronos-analyzer/src/: analyzer.rs  lib.rs
crates/chronos-bench/: Cargo.toml
crates/chronos-bench/src/: backtester.rs  metrics.rs  reporter.rs
crates/chronos-bench/tests/: benchmark_report.rs
crates/chronos-core/: Cargo.toml
crates/chronos-core/src/: lib.rs  types.rs
crates/chronos-models/: Cargo.toml
crates/chronos-models/src/: ets.rs  hw.rs  lib.rs  mstl.rs  npts.rs  seasonal_naive.rs  theta.rs
crates/chronos-models/src/ets/: tests.rs
crates/chronos-normalize/: Cargo.toml
crates/chronos-normalize/src/: lib.rs
crates/chronos-predictor/: Cargo.toml
crates/chronos-predictor/src/: lib.rs  pipeline.rs
crates/chronos-predictor/src/pipeline/: tests.rs
crates/chronos-predictor/tests/: accuracy_test.rs  comparison_test.rs
crates/chronos-selector/: Cargo.toml
crates/chronos-selector/src/: lib.rs  selector.rs
crates/chronos-selector/src/selector/: tests.rs
crates/chronos-trainer/: Cargo.toml
crates/chronos-trainer/src/: lib.rs  trainer.rs
crates/chronos-trainer/src/trainer/: tests.rs
crates/common/: Cargo.toml
crates/common/src/: config.rs  decimal.rs  error.rs  lib.rs  metrics.rs  types.rs
crates/models/: Cargo.toml
crates/models/src/: ets.rs  hw.rs  mstl.rs  npts.rs  seasonal_naive.rs  theta.rs
crates/models/src/ets/: tests.rs
crates/models/src/hw/: tests.rs
crates/normalize/: Cargo.toml
crates/normalize/src/: lib.rs  tests.rs
crates/predictor/: Cargo.toml
crates/predictor/src/: lib.rs  pipeline.rs
crates/predictor/src/pipeline/: tests.rs
crates/predictor/tests/: accuracy_test.rs  comparison_test.rs  real_data_test.rs
crates/scaler/: Cargo.toml
crates/scaler/src/: lib.rs  standard.rs
crates/selector/: Cargo.toml
crates/selector/src/: lib.rs  selector.rs
crates/selector/src/selector/: tests.rs
crates/trainer/: Cargo.toml
crates/trainer/src/: lib.rs  trainer.rs
crates/trainer/src/trainer/: tests.rs
scripts/: extend_json_data.py  fetch_pattern_data.py  fetch_random_data.py  requirements.txt  validate_json_data.py
tests/golden/: analyzer_output.json  input_data.json  normalize_output.json  selector_output.json
tests/real/: README.md  double_bottom-01.json  double_bottom-02.json  double_bottom-03.json  double_bottom-04.json  double_bottom-05.json  downtrend-02.json  downtrend-03.json  downtrend-04.json  downtrend-05.json  gradual_change-01.json  gradual_change-02.json  gradual_change-03.json  gradual_change-04.json  gradual_change-05.json  high_volatility-02.json  high_volatility-03.json  high_volatility-04.json  high_volatility-05.json  high_volatility.json  low_volatility-02.json  low_volatility-03.json  low_volatility-04.json  low_volatility-05.json  low_volatility.json  range-01.json  range-02.json  range-03.json  range-04.json  range-05.json  spike_down-01.json  spike_down-02.json  spike_down-03.json  spike_down-04.json  spike_down-05.json  spike_up-01.json  spike_up-02.json  spike_up-03.json  spike_up-04.json  spike_up-05.json  (+10 more)
