[workspace]
resolver = "2"
members = [
    "crates/chronos-core",
    "crates/chronos-normalize",
    "crates/chronos-analyzer",
    "crates/chronos-selector",
    "crates/chronos-models",
    "crates/chronos-trainer",
    "crates/chronos-predictor",
]

[workspace.package]
version = "0.1.1"
edition = "2021"
license = "MIT"

[workspace.dependencies]
# Internal crates
chronos-core = { path = "crates/chronos-core" }
chronos-normalize = { path = "crates/chronos-normalize" }
chronos-analyzer = { path = "crates/chronos-analyzer" }
chronos-selector = { path = "crates/chronos-selector" }
chronos-models = { path = "crates/chronos-models" }
chronos-trainer = { path = "crates/chronos-trainer" }
chronos-predictor = { path = "crates/chronos-predictor" }

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Numeric / Math
ndarray = "0.16"
num-complex = "0.4"
bigdecimal = { version = "0.4", features = ["serde"] }
num-traits = "0.2"
rustfft = "6.2"
statrs = "0.18"

# Forecasting
augurs = { version = "0.7", features = ["ets", "mstl"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Parallelism
rayon = "1"

# Testing
approx = "0.5"
