[workspace]
resolver = "2"
members = [
    "crates/common",
    "crates/normalize",
    "crates/analyzer",
    "crates/selector",
    "crates/models",
    "crates/trainer",
    "crates/predictor",
    "crates/bench",
]

[workspace.package]
version = "0.1.3"
edition = "2021"
license = "MIT"

[workspace.dependencies]
# Internal crates
common = { path = "crates/common" }
normalize = { path = "crates/normalize" }
analyzer = { path = "crates/analyzer" }
selector = { path = "crates/selector" }
models = { path = "crates/models" }
trainer = { path = "crates/trainer" }
predictor = { path = "crates/predictor" }
bench = { path = "crates/bench" }

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Numeric / Math
ndarray = "0.16"
num-complex = "0.4"
bigdecimal = { version = "0.4", features = ["serde"] }
num-traits = "0.2"
rustfft = "6.2"
statrs = "0.18"

# Forecasting
augurs = { version = "0.7", features = ["ets", "mstl"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Parallelism
rayon = "1"

# Testing
approx = "0.5"
