[package]
name = "analyzer"
version.workspace = true
edition.workspace = true

[dependencies]
common = { workspace = true }
chrono = { workspace = true }
rustfft = { workspace = true }
num-complex = { workspace = true }
statrs = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
serde_json = { workspace = true }
