[package]
name = "chronos-analyzer"
version.workspace = true
edition.workspace = true

[dependencies]
chronos-core = { workspace = true }
chrono = { workspace = true }
rustfft = { workspace = true }
num-complex = { workspace = true }
statrs = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
serde_json = { workspace = true }
