[package]
name = "chronos-bench"
version.workspace = true
edition.workspace = true

[dependencies]
chronos-core = { workspace = true }
chronos-normalize = { workspace = true }
chronos-analyzer = { workspace = true }
chronos-selector = { workspace = true }
chronos-models = { workspace = true }
chronos-trainer = { workspace = true }
chronos-predictor = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tracing-subscriber = { workspace = true }
