[package]
name = "chronos-models"
version.workspace = true
edition.workspace = true

[dependencies]
chronos-core = { workspace = true }
chrono = { workspace = true }
augurs = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
