[package]
name = "chronos-predictor"
version.workspace = true
edition.workspace = true

[dependencies]
chronos-core = { workspace = true }
chronos-normalize = { workspace = true }
chronos-analyzer = { workspace = true }
chronos-selector = { workspace = true }
chronos-models = { workspace = true }
chronos-trainer = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
