[package]
name = "chronos-selector"
version.workspace = true
edition.workspace = true

[dependencies]
chronos-core = { workspace = true }
chronos-analyzer = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
serde_json = { workspace = true }
