[package]
name = "models"
version.workspace = true
edition.workspace = true

[dependencies]
common = { workspace = true }
scaler = { workspace = true }
chrono = { workspace = true }
augurs = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
rayon = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
