[package]
name = "normalize"
version.workspace = true
edition.workspace = true

[dependencies]
common = { workspace = true }
chrono = { workspace = true }
bigdecimal = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
serde_json = { workspace = true }
