[package]
name = "predictor"
version.workspace = true
edition.workspace = true

[dependencies]
common = { workspace = true }
normalize = { workspace = true }
analyzer = { workspace = true }
selector = { workspace = true }
models = { workspace = true }
trainer = { workspace = true }
chrono = { workspace = true }
bigdecimal = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
num-traits = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }
normalize = { workspace = true }
analyzer = { workspace = true }
selector = { workspace = true }
